chore: in process of refactoring - bonus frb shadow and evidence
